added css styling

--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -8,15 +8,17 @@
     <title>My Team</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../styles.css">
+
     <script src="https://kit.fontawesome.com/c502137733.js"></script>
 </head>
 
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 jumbotron mb-3 team-heading">
-                <h1 class="text-center">My Team</h1>
+            <div class="col-12 jumbotron mb-3 team-heading" id="jumbo">
+                <h1 class="text-center" style="font-size: 3.6em;">My Team</h1>
             </div>
         </div>
     </div>
@@ -25,27 +27,14 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Aaron Williams</h2>
+        <h2 class="card-title">2</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 38</li>
-            <li class="list-group-item">Email: <a href="mailto:aaronsphone32365@gmail.com">aaronsphone32365@gmail.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/Sacramento City College" target="_blank" rel="noopener noreferrer">Sacramento City College</a></li>
-        </ul>
-    </div>
-</div>
-,<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Steve Stenvenston</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 21</li>
-            <li class="list-group-item">Email: <a href="mailto:Stevenston.Steve@gmail.com">Stevenston.Steve@gmail.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/steve@github.com" target="_blank" rel="noopener noreferrer">steve@github.com</a></li>
+            <li class="list-group-item">ID: 1</li>
+            <li class="list-group-item">Email: <a href="mailto:1">1</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/" target="_blank" rel="noopener noreferrer"></a></li>
         </ul>
     </div>
 </div>
