--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -27,14 +27,40 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">2</h2>
+        <h2 class="card-title">John Doe</h2>
+        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 2</li>
+            <li class="list-group-item">Email: <a href="mailto:John@gmail.com">John@gmail.com</a></li>
+            <li class="list-group-item">Office number: 32</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Aaron Williams</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 1</li>
-            <li class="list-group-item">Email: <a href="mailto:1">1</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/" target="_blank" rel="noopener noreferrer"></a></li>
+            <li class="list-group-item">Email: <a href="mailto:aaron@gmail.com">aaron@gmail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/Aaron32365" target="_blank" rel="noopener noreferrer">Aaron32365</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Steve smith</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 3</li>
+            <li class="list-group-item">Email: <a href="mailto:Steve@gmail.com">Steve@gmail.com</a></li>
+            <li class="list-group-item">School: UCDavis</li>
         </ul>
     </div>
 </div>
